--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         
         <img class="pp" src="profile.png">
-        <p>Hello, welcome to my website. My name is Viraj Zaveri, and I'm currently a rising senior at Fremont High School located in Sunnyvale, California. Here, you can view my activites, accolades, coursework, and hobbies. Please feel free to contact me through my email below with any further questions or comments.
+        <p>Hello, welcome to my website. My name is Viraj Zaveri, and I'm currently a senior at Fremont High School located in Sunnyvale, California. Here, you can view my activites, accolades, coursework, and hobbies. Please feel free to contact me through my email below with any further questions or comments.
         </p>
         
         <p>
