--- a/coursework.html
+++ b/coursework.html
@@ -25,6 +25,7 @@
             <li>AP Microeconomics</li>
             <li>Chemistry Honors</li>
             <li>United States Government</li>
+            <li>Story and Style</li>
             <li>Ceramics</li>
         </ul>
         
