--- a/coursework.html
+++ b/coursework.html
@@ -22,6 +22,7 @@
         <h3>Senior Year</h3>
         <ul>
             <li>AP Statistics</li>
+            <li>Differential Equations</li>
             <li>AP Microeconomics</li>
             <li>Chemistry Honors</li>
             <li>United States Government</li>
