--- a/activities.html
+++ b/activities.html
@@ -49,7 +49,7 @@
         
         <h3>Machine Learning</h3>
         <ul>
-            <li>CTO of non-profit Ctrl Shift Tech</li>
+            <li>CTO of educational platform Ctrl Shift Tech</li>
             <ul>
                 <li>Created introductory Python and Java videos</li>
                 <li>Wrote in depth articles regarding the domains of AI and ML</li>
